[package]
name = "matthias-memory-profiling-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
divan = { version = "4.1.0", package = "codspeed-divan-compat" }

[[bench]]
name = "json_bench"
harness = false

[[bench]]
name = "rle_bench"
harness = false