[package]
name = "matthias-memory-profiling-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
divan = { package = "codspeed-divan-compat", git = "https://github.com/CodSpeedHQ/codspeed-rust/", branch = "cod-1711-codspeed-rust-add-analysis-mode-support" }

[[bench]]
name = "rle_bench"
harness = false